--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="lib/angular-route/angular-route.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
+    <script src="js/exerciseCtrl.js"></script>
 </head>
 <body ng-app="starter">
 
