--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
     <script src="js/exerciseCtrl.js"></script>
+    <script src="js/settingsCtrl.js"></script>
 </head>
 <body ng-app="starter">
 
