--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,8 @@
     <!-- your app's js -->
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-gravatar/build/md5.js"></script>
+    <script src="bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
     <script src="js/exerciseCtrl.js"></script>
